tests/syntax_error/indexing.jou
def foo() -> None:
    asd[lol 123]  # Error: expected a ']', got an integer
